--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ analysis = [
     "plotly>=6.1.0",
 ]
 dev = [
+    "frictionless[parquet]>=5.18.1",
     "pre-commit>=4.2.0",
     "pytest>=8.3.5",
 ]
