--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,12 @@
 name: Release
 
 on:
+  workflow_dispatch:
   push:
     tags:
       # Publish on any tag starting with a `v`, e.g. v1.2.3
       - v*
+
 
 jobs:
   pypi:
