--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "cacimbao"
 version = "0.1.0"
-description = "Brazilian datasets for educational purposes"
+description = "Base de dados brasileiras com dados reais para propósitos educacionais"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
@@ -15,6 +15,9 @@ dependencies = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.setuptools]
+packages = ["cacimbao", "data"]
 
 [dependency-groups]
 analysis = [
