--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ packages = ["cacimbao", "data"]
 [dependency-groups]
 analysis = [
     "marimo>=0.13.9",
-    "plotly>=6.1.0",
+    "plotly==6.1.2",
 ]
 dev = [
     "frictionless[parquet]>=5.18.1",
