--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,10 +23,11 @@ exclude = ["cacimbao/data/pesquisa-nacional-de-saude-2019/*.parquet"]
 
 [dependency-groups]
 analysis = [
-    "marimo>=0.13.9",
+    "marimo>=0.14.13",
     "plotly==6.1.2",
 ]
 dev = [
+    "fastexcel>=0.14.0",
     "frictionless[parquet]>=5.18.1",
     "pre-commit>=4.2.0",
     "pytest>=8.3.5",
