--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "cacimbao"
 version = "0.4.0"
-description = "Base de dados brasileiras com dados reais para propósitos educacionais"
+description = "Base de dados reais brasileiros para propósitos educacionais"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
